# linkstash-backend-rs

./: .env.example  .gitignore  Cargo.toml  libapplication_settings.rlib  service-layer-refactor-vision.md  test.env
.github/workflows/: test-app.yml
.kiro/specs/admin-role-api-management/: design.md  requirements.md  tasks.md
.kiro/specs/admin-role-system/: design.md  (+2 more)
.kiro/steering/: appdata-pattern.md  documentation.md  logging.md  product.md  request-context.md  security-and-docs.md  security.md  spec-development.md  structure.md  tech.md  testing.md
docs/: adding-secrets.md  appdata-pattern.md  authorization-and-user-levels.md  bootstrap-and-owner-management.md  error-handling.md  extending-audit-logs.md  password-management.md  request-context.md  test-utilities.md  timing-attack-mitigation.md
http/: login.http
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_create_users.rs  m20240101_000002_create_refresh_tokens.rs  m20240101_000003_create_audit_events.rs  m20250123_000001_create_auth_schema.rs  m20250123_000002_create_audit_schema.rs  m20250127_000001_create_common_passwords.rs  m20250127_000002_create_hibp_cache.rs  m20250127_000003_add_password_change_required.rs  m20250127_000004_create_system_settings.rs  m20250201_000001_create_auth_tables.rs  m20250201_000002_create_audit_tables.rs
src/: api.rs  app_data.rs  changes.md  lib.rs  main.rs  models.rs  test.http
src/api/: admin.rs  auth.rs  health.rs  helpers.rs  helpers_test.rs  items.rs  mod.rs  user.rs
src/audit/: audit_builder.rs  audit_logger.rs  audit_logger_provider.rs  login.rs  mod.rs
src/auth/: api.rs  credential_store.rs  errors.rs  mod.rs  models.rs  token_manager.rs
src/cli/: bootstrap.rs  credential_export.rs  migrate.rs  mod.rs  owner.rs  password_management.rs
src/config/: application_settings.rs  bootstrap_settings.rs  config_spec.rs  database.rs  env_provider.rs  errors.rs  logging.rs  mod.rs  secret_config.rs  secret_manager.rs  settings_manager.rs  settings_registry.rs
src/coordinators/: admin_coordinator.rs  auth_coordinator.rs  login_coordinator.rs  mod.rs  owner_coordinator.rs  user_coordinator.rs
src/errors/: admin.rs  admin_test.rs  auth.rs  internal.rs  internal_test.rs  mod.rs
src/providers/: audit_logger_provider.rs  authentication_provider.rs  context_provider.rs  crypto_provider.rs  mod.rs  password_validator_provider.rs  token_provider.rs  user_provider.rs
src/services/: admin_service.rs  admin_service_tests.rs  audit_logger.rs  auth_service.rs  crypto.rs  mod.rs  password_validator.rs  password_validator_test.rs  token_service.rs
src/stores/: audit_store.rs  authentication_store.rs  authorization_store.rs  credential_store.rs  credential_store_invalidate_test.rs  mod.rs  owner_store.rs  system_config_store.rs  user_store.rs
src/test/: mod.rs  utils.rs
src/types/: mod.rs
static/: index.html
tests/: credential_export_test.rs  request_context_test.rs  secret_manager_integration.rs  system_config_store_test.rs
tests/common/: mod.rs
(+115 files in other folders)
