[package]
name = "linkstash-backend-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3.1"
poem-openapi = { version = "5.1", features = ["swagger-ui"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
argon2 = "0.5.3"
rand = "0.9.2"
sha2 = "0.10"
base64 = "0.21"
jsonwebtoken = "9.2"
dotenv = "0.15"
migration = { path = "migration" }

# this is specifically for SaltString::generate, which still expects traits frop rand_core 0.6 dont use anything from rand_core directly
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
poem = { version = "3.1", features = ["test"] }